--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rest-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/app.ts",
   "author": "Code-Abe",
   "license": "MIT",
   "scripts": {
