--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Code-Abe",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpile-only src/app.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
